<resources>
    <string name="app_name">Ever Vital</string>
    <string name="lets_startbtn">Lets Start</string>
    <string name="email">Email</string>
    <string name="email1">Email1</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="Password">Password</string>
    <string name="loginbtn">LogIn</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="Email">Email</string>
    <string name="passwords">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="button">Button</string>
    <string name="sign_up1">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginlogin">Login</string>
    <string name="text">text</string>
    <string name="image">TODO</string>
    <string name="button1">Button</string>
    <string name="click">click</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="button2">Button</string>
    <string name="menu">MENU</string>
    <string name="bell">BELL</string>
    <string name="hello">Hello</string>
    <string name="hello1">Hello,</string>
    <string name="fredoka">Fredoka</string>
    <string name="fredoka1">Fredoka !</string>
    <string name="mentalhealth">Mental</string>
    <string name="ever_vital">Ever Vital</string>
    <string name="mental_health">Mental Health</string>
    <string name="octomber_10">Octomber 10</string>
    <string name="categorize">Categorize</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="article">Article</string>
    <string name="articletxt">Articletxt</string>
    <string name="articles">Articles</string>
    <string name="see_more"><![CDATA[See More ->]]></string>
    <string name="doc2">Doc2</string>
    <string name="keep_your_mind_relax">Keep Your Mind Relax</string>
    <string name="see_moree"><![CDATA[See More ->]]></string>
    <string name="addgroup">Addgroup</string>
    <string name="plus">Plus</string>
    <string name="back">Back</string>
    <string name="art">Articles</string>
    <string name="imgbtn1">Imgbtn1</string>
    <string name="gotthis">Gotthis</string>
    <string name="maintaining_mental_health">Maintaining mental health</string>
    <string name="self_care_maintaining_mental_health">Self-care maintaining mental health</string>
    <string name="button4">Button</string>
    <string name="healthy">Healthy</string>
    <string name="boost_your_mental_health">Boost your mental health</string>
    <string name="button5">Button</string>
    <string name="better">Better</string>
    <string name="bulding_better_mental_health">Bulding better mental health</string>
    <string name="button6">button6</string>
    <string name="read_more">Read More</string>
    <string name="read_more2"><![CDATA[Read More ->]]></string>
    <string name="read_more3"><![CDATA[Read More ->]]></string>
    <string name="read_more0"><![CDATA[Read More ->]]></string>
    <string name="backk">Backk</string>
    <string name="mind_relax">Mind Relax</string>
    <string name="entertaintments">Entertaintments →</string>
    <string name="musicicon">Musicicon</string>
    <string name="imgmusic">Imgmusic</string>
    <string name="imgvideo">Imgvideo</string>
    <string name="play_games">Play Games →</string>
    <string name="imggame">Imggame</string>
    <string name="todoo">TODO</string>
    <string name="homeicn">Homeicn</string>
    <string name="hicn">Hicn</string>
    <string name="hoicn">Hoicn</string>
    <string name="addlist">Addlist</string>
    <string name="add">Add</string>
    <string name="addlicn">Addlicn</string>
    <string name="logout">Logout</string>
    <string name="lgicon">Lgicon</string>
    <string name="lgoicn">Logicn</string>
    <string name="backicn">Backicn</string>
    <string name="add_your_feelings">Add Your Feelings</string>
    <string name="homee">Homee</string>
    <string name="addto">Addto</string>
    <string name="lgout">Lgout</string>
    <string name="date">Date</string>
    <string name="add_date">Add Date</string>
    <string name="feeling">Feeling</string>
    <string name="happiness">Happiness</string>
    <string name="sadness">Sadness</string>
    <string name="happinesss">Happiness 😄</string>
    <string name="sadnesss">Sadness 😓</string>
    <string name="anger">Anger 😡</string>
    <string name="fear">Fear 😱</string>
    <string name="love">Love 🩵</string>
    <string name="pride">Pride 😌</string>
    <string name="shame">Shame 🫣</string>
    <string name="loneliness">Loneliness 🥺</string>
    <string name="confusion">Confusion 😳</string>
    <string name="describe">Describe</string>
    <string name="describetxt">Describetxt</string>
    <string name="describe_text">Describe Text</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google">Google</string>
    <string name="google1">Google</string>
    <string name="or">Or</string>
    <string name="googlee">Google</string>
    <string name="facebook">Facebook</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="profimg">Profimg</string>
    <string name="back3">Back</string>
    <string name="profiletxt">Profile</string>
    <string name="shehan_amarasuriya">Shehan Amarasuriya</string>
    <string name="shehanamarasuriya_gmail_com">shehanamarasuriya@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hme">Hme</string>
    <string name="adlist">Adlist</string>
    <string name="profilei">Profilei</string>
    <string name="profileimg">Profileimg</string>
    <string name="picn">Picn</string>
    <string name="pricn">Pricn</string>
    <string name="namee">Name:</string>
    <string name="sheshan_amarasuriya">Sheshan Amarasuriya</string>
    <string name="age">Age:</string>
    <string name="_25">25</string>
    <string name="s_m_shehan_amarasuriya">S.M. Shehan Amarasuriya</string>
    <string name="telephone">Telephone</string>
    <string name="_0123456789">0123456789</string>
    <string name="country">Country</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="log_out">Log Out</string>
    <string name="backic">Backic</string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="hm">Hm</string>
    <string name="al">Al</string>
    <string name="pr">Pr</string>
    <string name="namen">Name:</string>
    <string name="namename">Name</string>
    <string name="name2">Name</string>
    <string name="email12">Email</string>
    <string name="emaill">Email</string>
    <string name="telephone2">Telephone</string>
    <string name="_01234567891">0123456789</string>
    <string name="countryy">Country</string>
    <string name="countryi">Country</string>
    <string name="save">Save</string>
    <string name="fredoka_amarasooriya">Fredoka Amarasooriya</string>
    <string name="fredokaamarasooriyagmail_com">fredokaamarasooriyagmail_com</string>
    <string name="edit_details">Edit Details</string>
    <string name="s_m_fredoka_amarasooriya">S.M. Fredoka Amarasooriya</string>
    <string name="rec">Rec</string>
    <string name="rec1">Rec1</string>
    <string name="recc">TODO</string>
    <string name="im">TODO</string>
    <string name="imm">Im</string>
    <string name="rect">RECt</string>
    <string name="dfgf">ggf</string>
    <string name="imgrec">IMGREC</string>
    <string name="book">Book</string>
    <string name="bookc">Bookc</string>
    <string name="mind_relax_activities">Mind Relax Activities</string>
    <string name="mind">Mind</string>
    <string name="buttonn">Button</string>
    <string name="namei">Name</string>
    <string name="addtoto">ADDtoto</string>
    <string name="option3">RadioButton</string>
    <string name="savea">Savea</string>
    <string name="abc">TODO</string>
    <string name="my_feelings">My Feelings</string>
    <string name="malisha">Malisha</string>
    <string name="clear_all">Clear All</string>
    <string name="see_my_feelings">See My Feelings</string>
    <string name="status_about_your_feeling">Status About Your Feeling</string>
    <string name="moodtrack">e.x: Happiness 😀 , Sad 🥺</string>
    <string name="_2025_04_17">2025.04.17</string>
    <string name="feeling_happy">Feeling Happy 😄</string>
    <string name="i_have_to_do_mad_assignment_and_it_is_now_success_yurekaa">I have to do MAD Assignment and it is now success yurekaa !!</string>
    <string name="backicn2">BACKICN2</string>
    <string name="feeling_activities">Feeling Activities</string>
</resources>